--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sailing",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "sailing",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "zip": "node scripts/zip.js",
     "build": "webpack && node scripts/bundleHtml.js",
     "dev": "webpack --watch --progress",
-    "buildzip": "webpack && node scripts/bundleHtml.js && node scripts/zip.js"
+    "buildzip": "webpack --mode production && node scripts/bundleHtml.js && node scripts/zip.js"
   },
   "keywords": [],
   "author": "Grynjolf",
