--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -21,28 +21,28 @@ jobs:
           node-version: latest
           check-latest: true
 
-      - name: build
+      - name: Build
         run: |
           npm install
-          npm run build
+          npm run dist
 
-      - name: get metadata
+      - name: Extract metadata
         id: metadata
         run: |
           GAME_ID=$(jq '.game' metadata.json)
           MOD_ID=$(jq '.mod' metadata.json)
           VERSION=$(jq '.version' metadata.json -r)
           ZIPFILE_NAME=$(jq '.zipfile' metadata.json -r)
-          VERSION_CHANGELOG=$(git log -1 --pretty=%B)
+          VERSION_CHANGELOG=$(git log $(git describe --tags --abbrev=0 @^)..@ --pretty=%B)
 
           echo "GAME=$GAME_ID" >> $GITHUB_OUTPUT
           echo "MOD=$MOD_ID" >> $GITHUB_OUTPUT
           echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
-          echo "ZIPFILE=./dist/$ZIPFILE_NAME" >> $GITHUB_OUTPUT
+          echo "ZIPFILE=./package/$ZIPFILE_NAME" >> $GITHUB_OUTPUT
           echo "CHANGELOG=$VERSION_CHANGELOG" >> $GITHUB_OUTPUT
 
-      - name: deploy to mod io
-        uses: nickelc/upload-to-modio@v2.0.0
+      - name: Deploy to mod.io
+        uses: nickelc/upload-to-modio@v2.1.0
         with:
           token: ${{ secrets.MODIO_TOKEN }}
           game: ${{ steps.metadata.outputs.GAME }}
@@ -52,7 +52,7 @@ jobs:
           changelog: ${{ steps.metadata.outputs.CHANGELOG }}
           active: true
 
-      - name: create github release
+      - name: Create GitHub release
         uses: ncipollo/release-action@v1
         with:
           artifacts: ${{ steps.metadata.outputs.ZIPFILE }}
