--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -1,6 +1,7 @@
 name: Build and Deploy Mod to Mod.io
 
 on:
+  workflow_dispatch:
   # runs when you either create a new tag or push an existing one
   create:
   push:
