--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -17,8 +17,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-tags: true
+      - run: git fetch --tags
       - uses: actions/setup-node@v3
         with:
           node-version: latest
