--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -59,5 +59,5 @@ jobs:
         with:
           artifacts: ${{ steps.metadata.outputs.ZIPFILE }}
           body: ${{ steps.metadata.outputs.CHANGELOG }}
-          tag: ${{ steps.metadata.outputs.VERSION }}
+          tag: v${{ steps.metadata.outputs.VERSION }}
           makeLatest: true
