--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - run: git fetch --tags
+      - run: git fetch --tags --force
       - uses: actions/setup-node@v3
         with:
           node-version: latest
