--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -13,11 +13,12 @@ jobs:
       contents: write # needed to create a release
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
+          show-progress: false
           fetch-depth: 0
       - run: git fetch --tags --force
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: latest
           check-latest: true
