balance: update mastery token chance and amt

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
+    "noImplicitOverride": true,
+    "noImplicitThis": true,
     "resolveJsonModule": true,
     "strict": false,
     "skipLibCheck": true,
