update eslint/prettier and cannon images
set different ships to different names and images
added weapon upgrade

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "moduleResolution": "node",
     "noImplicitOverride": true,
     "noImplicitThis": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
     "resolveJsonModule": true,
     "strict": false,
     "skipLibCheck": true,
