--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "@stylistic/eslint-plugin": "^2.9.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/ifvisible": "^1.1.0",
     "@types/ion-rangeslider": "^2.3.2",
     "@types/node": "^18.11.13",
@@ -25,24 +28,26 @@
     "css-loader": "^6.7.1",
     "del": "^7.0.0",
     "dexie": "^3.2.2",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.0",
     "fflate": "^0.7.3",
     "fuse.js": "^3.4.6",
     "html-minifier-terser": "^7.0.0",
     "melvor-types": "https://github.com/GamesByMalcsPtyLtd/Melvor-Typing-Project/tarball/8b96869",
     "mitt": "^3.0.0",
     "petite-vue": "^0.4.1",
-    "prettier": "^2.8.3",
+    "prettier": "^3.3.3",
     "simplebar": "^5.3.6",
     "style-loader": "^3.3.1",
     "sweetalert2": "^11.4.16",
     "tippy.js": "^6.2.6",
     "ts-loader": "^9.4.1",
-    "typescript": "^4.8.4",
+    "typescript": "^4.9.5",
+    "typescript-eslint": "^8.8.1",
     "uuid": "^9.0.0",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-remove-code-blocks": "^0.1.6"
   }
 }
