--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "pack": "webpack",
     "zip": "node scripts/zip.js",
-    "build": "webpack --node-env development && node scripts/bundleHtml.js",
+    "build": "webpack && node scripts/bundleHtml.js",
     "dev": "webpack --watch --progress",
-    "dist": "webpack --node-env production && node scripts/bundleHtml.js && node scripts/zip.js"
+    "dist": "webpack --mode production && node scripts/bundleHtml.js && node scripts/zip.js",
+    "distbuild": "webpack --mode production && node scripts/bundleHtml.js"
   },
   "keywords": [],
   "author": "Grynjolf",
@@ -48,6 +49,6 @@
     "uuid": "^9.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-remove-code-blocks": "kudashevs/webpack-remove-code-blocks#v0.9.0"
+    "webpack-remove-code-blocks": "github:kudashevs/webpack-remove-code-blocks#v0.10.0"
   }
 }
