--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "pack": "webpack",
     "zip": "node scripts/zip.js",
-    "build": "webpack && node scripts/bundleHtml.js",
-    "dev": "webpack --watch --progress",
-    "dist": "webpack --mode production && node scripts/bundleHtml.js && node scripts/zip.js",
-    "distbuild": "webpack --mode production && node scripts/bundleHtml.js"
+    "build": "webpack --config webpack.dev.js && node scripts/bundleHtml.js",
+    "dev": "webpack --config webpack.dev.js --watch --progress",
+    "dist": "webpack --config webpack.prod.js && node scripts/bundleHtml.js && node scripts/zip.js",
+    "distbuild": "webpack --config webpack.prod.js && node scripts/bundleHtml.js"
   },
   "keywords": [],
   "author": "Grynjolf",
@@ -50,6 +50,7 @@
     "uuid": "^9.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
+    "webpack-merge": "^6.0.1",
     "webpack-remove-code-blocks": "github:kudashevs/webpack-remove-code-blocks#v0.10.0"
   }
 }
